<resources>
    <string name="app_name">Bill Please</string>
    <string name="numpax">Num of Pax</string>
    <string name="amt">Amount</string>
    <string name="gst">GST</string>
    <string name="svs">SVS</string>
    <string name="discDisplay">Discount(%)</string>
    <string name="each_pay">Each Pays:</string>
    <string name="total_pay">Total Bill:</string>
    <string name="reset">reset</string>
    <string name="split">split</string>
    <string name="amount">Amount</string>
    <string name="num_of_pax">Num Of Pax</string>
    <string name="discount">Discount(%)</string>
</resources>
